--- a/css/styles.css
+++ b/css/styles.css
@@ -22,7 +22,7 @@ body{
   display: flex;
   justify-content: center;
   align-items: center;
-  border-radius: 20% 0 0 60%;
+  border-radius: 20% 0 0 40%;
   transition: right 0.8s cubic-bezier(1, 0, 0, 1);
 }
 
@@ -63,6 +63,7 @@ body{
 
 .nav-list{
   text-align: right;
+  padding-top: 50px;
 }
 
 .nav-item{
@@ -72,7 +73,7 @@ body{
 
 .nav-link{
   text-decoration: none;
-  font-size: 22px;
+  font-size: 12px;
   color: #eee;
   font-weight: 300;
   letter-spacing: 1px;
@@ -85,7 +86,7 @@ body{
   content: " ";
   width: 100%;
   height: 2px;
-  background-color: chocolate;
+  background-color: #fff;
   position: absolute;
   left: 0;
   transform: scaleX(0);
@@ -104,4 +105,13 @@ body{
 
 .nav-link:hover::before, .nav-link:hover::after{
   transform: scaleX(1);
+}
+
+.container img{
+  position: relative;
+  padding-top: 20px;
+  padding-left: 15px;
+  padding-bottom: 0px;
+  height: auto;
+  width: 25%;
 }
