--- a/css/styles.css
+++ b/css/styles.css
@@ -115,3 +115,15 @@ body{
   height: auto;
   width: 25%;
 }
+
+footer p {
+  font-size: 0.75em;
+  text-align: center;
+  color: #ffffff;
+  padding-top: 1em;
+  padding-bottom: 2em;
+}
+
+footer {
+  background-color: #006747;
+}
