--- a/css/styles.css
+++ b/css/styles.css
@@ -3,8 +3,18 @@
   padding: 0;
 }
 
-body{
+body, main, p, h1, h2, h3, h4{
   font-family: "Dosis", sans-serif;
+}
+
+.hero {
+  background-color: #006747;
+  color: #000000;
+  background-image: url("../media/nw_admin.jpg");
+  background-position: top;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: 100% 100%;
 }
 
 .container{
