--- a/css/styles.css
+++ b/css/styles.css
@@ -118,7 +118,7 @@ body, main, p, h1, h2, h3, h4{
 }
 
 .container img{
-  position: relative;
+  position: fixed;
   padding-top: 20px;
   padding-left: 15px;
   padding-bottom: 0px;
@@ -132,8 +132,123 @@ footer p {
   color: #ffffff;
   padding-top: 1em;
   padding-bottom: 2em;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 footer {
   background-color: #006747;
+}
+
+/*Media Query for Mobile Viewport */
+@media only screen and (max-width: 630px) {
+  .container{
+    width: 100%;
+    height: 100vh;
+  }
+
+  .navbar{
+    width: 300px;
+    height: 100%;
+    background-color: #006747;
+    position: fixed;
+    top: 0;
+    right: -300px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 20% 0 0 40%;
+    transition: right 0.8s cubic-bezier(1, 0, 0, 1);
+  }
+
+  .change{
+    right: 0;
+  }
+
+  .hamburger-menu{
+    width: 35px;
+    height: 30px;
+    position: fixed;
+    top: 50px;
+    right: 50px;
+    cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+  }
+
+  .line{
+    width: 100%;
+    height: 3px;
+    background-color: #A6A6A6;
+    transition: all 0.8s;
+  }
+
+  .change .line-1{
+    transform: rotateZ(-405deg) translate(-8px, 6px);
+  }
+
+  .change .line-2{
+    opacity: 0;
+  }
+
+  .change .line-3{
+    transform: rotateZ(405deg) translate(-8px, -6px);
+  }
+
+  .nav-list{
+    text-align: right;
+    padding-top: 50px;
+  }
+
+  .nav-item{
+    list-style: none;
+    margin: 25px;
+  }
+
+  .nav-link{
+    text-decoration: none;
+    font-size: 8px;
+    color: #eee;
+    font-weight: 300;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    position: relative;
+    padding: 3px 0;
+  }
+
+  .nav-link::before, .nav-link::after{
+    content: " ";
+    width: 100%;
+    height: 2px;
+    background-color: #fff;
+    position: absolute;
+    left: 0;
+    transform: scaleX(0);
+    transition: transform 0.5s;
+  }
+
+  .nav-link::after{
+    bottom: 0;
+    transform-origin: right;
+  }
+
+  .nav-link::before{
+    top: 0;
+    transform-origin: left;
+  }
+
+  .nav-link:hover::before, .nav-link:hover::after{
+    transform: scaleX(1);
+  }
+
+  .container img{
+    position: fixedS;
+    padding-top: 30px;
+    padding-left: 15px;
+    padding-bottom: 0px;
+    height: auto;
+    width: 50%;
+  }
+
 }
