--- a/css/styles.css
+++ b/css/styles.css
@@ -243,7 +243,7 @@ footer {
   }
 
   .container img{
-    position: fixedS;
+    position: fixed;
     padding-top: 30px;
     padding-left: 15px;
     padding-bottom: 0px;
