--- a/css/styles.css
+++ b/css/styles.css
@@ -20,6 +20,8 @@ body, main, p, h1, h2, h3, h4{
 .container{
   width: 100%;
   height: 20vh;
+  position: fixed;
+  background-color: #fff;
 }
 
 .navbar{
@@ -118,8 +120,8 @@ body, main, p, h1, h2, h3, h4{
 }
 
 .container img{
-  position: fixed;
-  padding-top: 20px;
+  position: flex;
+  padding-top: 10px;
   padding-left: 15px;
   padding-bottom: 0px;
   height: auto;
@@ -140,33 +142,62 @@ footer {
   background-color: #006747;
 }
 
-.grid-container {
-  display: grid;
-  row-gap: 50px;
-  column-gap: 20px;
-  grid-template-columns: auto auto auto auto;
+.grid-container{
   background-image: url("../media/nw_admin.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   width: 100%;
+  padding-top: 50px;
+  position: flex;
+}
+
+.grid-styles{
+  display: grid;
+  row-gap: 50px;
+  column-gap: 20px;
+  grid-template-columns: auto auto auto auto;
+  width: 90%;
   height: auto;
-  padding: 40px;
+  padding: 100px;
 }
 
 
 .grid-item {
   background-color: #fff;
   padding: 20px;
-  font-size: 30px;
+  font-size: auto;
   text-align: center;
+}
+
+.grid-link a:link{
+  color: #000;
+  text-decoration: none;
+}
+
+.grid-link a:visited{
+  color: #000;
+  text-decoration: none;
+}
+
+.grid-link a:active{
+  color: #000;
+  text-decoration: none;
+}
+
+.grid-link a:hover{
+  color: #000;
+  text-decoration: none;
 }
 
 /*Media Query for Mobile Viewport */
 @media only screen and (max-width: 630px) {
   .container{
     width: 100%;
-    height: 20vh;
+    height: 10vh;
+    background-color: #fff;
+    position: fixed;
+    padding-bottom: 20px;
   }
 
   .navbar{
@@ -194,7 +225,7 @@ footer {
     top: 50px;
     right: 50px;
     cursor: pointer;
-    display: flex;
+    display flex;
     flex-direction: column;
     justify-content: space-around;
   }
@@ -270,7 +301,65 @@ footer {
     padding-left: 15px;
     padding-bottom: 0px;
     height: auto;
-    width: 50%;
+    width: 30%;
   }
 
+  .grid-container {
+    background-image: url("../media/nw_admin.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    padding-top: 60px;
+  }
+
+  .grid-styles{
+    display: grid;
+    row-gap: 30px;
+    column-gap: 20px;
+    grid-template-columns: auto auto auto auto;
+    width: 90%;
+    height: auto;
+    padding: 40px;
+  }
+
+
+  .grid-item {
+    background-color: #fff;
+    padding: 20px;
+    font-size: auto;
+    text-align: center;
+  }
+
+  .grid-link a:link{
+    color: #000;
+    text-decoration: none;
+  }
+
+  .grid-link a:visited{
+    color: #000;
+    text-decoration: none;
+  }
+
+  .grid-link a:active{
+    color: #000;
+    text-decoration: none;
+  }
+
+  .grid-link a:hover{
+    color: #000;
+    text-decoration: none;
+  }
+
+}
+
+/*Media Query smallest size */
+@media only screen and (max-width: 300px){
+  .container img{
+    display: none;
+  }
+
+  .grid-container{
+    display: flex;
+  }
 }
