--- a/css/styles.css
+++ b/css/styles.css
@@ -1,18 +1,30 @@
-*{
-  margin: 0;
-  padding: 0;
-}
-
+/* Style rules for mobile viewport */
 body, main, p, h1, h2, h3, h4{
   font-family: "Dosis", sans-serif;
 }
 
+
+
+.row {
+  display: flex;
+  width: 100%;
+}
+
+body{
+  padding-top: 0px;
+  background-color: #fff;
+  margin:0px;
+
+}
+
+body h1{
+  color: #006747;
+  text-align: center;
+}
+
 form{
-     width: 70;
-     top-margin: 0;
-     bottom-margin: 0;
-     left-margin: auto;
-     right-margin: auto;
+     width: 100%;
+     margin:0;
    }
 
    form-grid{
@@ -21,40 +33,116 @@ form{
      grid-gap: 20px;
    }
 
-   .btn{
-     grid-column: 1 / span 2;
+select{
+  padding: 3px;
+  margin: 5px;
+}
+
+   .options{
+       cursor: pointer;
    }
 
-.hero {
-  background-color: #006747;
-  color: #000000;
-  background-image: url("../media/nw_admin.jpg");
-  background-position: top;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: 100% 100%;
-}
 
-.container{
+   .btn{
+     grid-column: 1 / span 2;
+     margin: 10px;
+     cursor: pointer;
+     background-color: #fff;
+
+   }
+
+   <!-- HTML !-->
+   <button class="button-74" role="button">Button 74</button>
+
+   /* CSS */
+   .button-74 {
+     background-color: #fff;
+     border: 2px solid #006747;
+     border-radius: 30px;
+     box-shadow: #006747 4px 4px 0 0;
+     color: #006747
+     cursor: pointer;
+     display: inline-block;
+     font-weight: 600;
+     font-size: 18px;
+     padding: 0 18px;
+     line-height: 50px;
+     text-align: center;
+     text-decoration: none;
+     user-select: none;
+     -webkit-user-select: none;
+     touch-action: manipulation;
+   }
+
+   .button-74:hover {
+     background-color: #fff;
+   }
+
+   .button-74:active {
+     box-shadow: #006747 2px 2px 0 0;
+     transform: translate(2px, 2px);
+   }
+
+   @media (min-width: 768px) {
+     .button-74 {
+       min-width: 120px;
+       padding: 0 25px;
+     }
+   }
+
+  .container{
   width: 100%;
   height: auto;
-  position: fixed;
   background-color: #fff;
-  padding-bottom: 10px;
+  margin-top: 0px;
 }
 
+.form-container{
+width: 85%;
+height: auto;
+background-color: #fff;
+margin-top: 0px;
+margin-bottom: 10px;
+padding: 20px 10px 20px 10px;
+text-align: center;
+margin: 10px;
+font-size: auto;
+}
+
+#go-down{
+  height: 80px;
+}
+
+/* Style rule for header */
+.topBar{
+  background-color: #fff;
+  position: fixed;
+  width: 100%;
+  height: 100px;
+  margin-left: 0;
+
+}
+.logo{
+  width: 50%;
+  position: fixed;
+  padding-top: 20px;
+  margin-left: 0%;
+}
+
+/* Style rules for navigation area */
 .navbar{
   width: 300px;
   height: 100%;
   background-color: #006747;
   position: fixed;
-  top: 0;
+  margin-top: 0%;
   right: -300px;
   display: flex;
   justify-content: center;
   align-items: center;
-  border-radius: 20% 0 0 40%;
+  border-radius: 40% 0 0 30%;
   transition: right 0.8s cubic-bezier(1, 0, 0, 1);
+  padding-bottom: 10px;
 }
 
 .change{
@@ -71,6 +159,7 @@ form{
   display: flex;
   flex-direction: column;
   justify-content: space-around;
+  background-color: #fff;
 }
 
 .line{
@@ -94,12 +183,12 @@ form{
 
 .nav-list{
   text-align: right;
-  padding-top: 50px;
+  padding-top: 80px;
 }
 
 .nav-item{
   list-style: none;
-  margin: 25px;
+  margin: 15px;
 }
 
 .nav-link{
@@ -138,327 +227,229 @@ form{
   transform: scaleX(1);
 }
 
-.container img{
-  position: flex;
-  padding-top: 20px;
-  padding-left: 15px;
-  padding-bottom: 0px;
-  height: auto;
-  width: 20%;
-}
 
-footer p {
-  font-size: 0.75em;
-  text-align: center;
-  color: #ffffff;
-  padding-top: 1em;
-  padding-bottom: 2em;
-  padding-left: 10px;
-  padding-right: 10px;
-}
-
-footer {
-  background-color: #006747;
-}
-
+/* Style rules for main content */
 .grid-container{
-  background-image: url("../media/nw_admin.jpg");
+  background-image: url("../media/mobile-bg-green.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   width: 100%;
-  padding-top: 100px;
+  height: 100%;
+  padding: 50px 5px 30px 5px;
   position: flex;
+  margin: 0;
 }
 
 .grid-styles{
   display: grid;
-  row-gap: 50px;
+  row-gap: 20px;
   column-gap: 20px;
-  grid-template-columns: auto auto auto auto;
+  grid-template-columns: auto auto;
   width: 90%;
   height: auto;
-  padding: 100px;
+  padding: 10px;
+}
+
+.grid-styles img{
+  width: 100%;
+}
+
+.grid-item a{
+  opacity: 1;
+  display: block;
+  width: 100%;
+  height: auto;
+  transition: .5s ease;
+  backface-visibility: hidden;
+}
+
+.grid-item a:hover {
+  opacity: 0.7;
+}
+
+.ca-container{
+  display: grid;
+  row-gap: 20px;
+  column-gap: 10px;
+  grid-template-columns:auto;
+  width: 90%;
+  height: auto;
+  padding: 10px;
 }
 
 
-.grid-item {
-  background-color: #fff;
-  padding: 20px;
-  font-size: auto;
+
+/*Style rules for footer*/
+footer{
   text-align: center;
+  font-size: 10px;
+  padding: 10px;
+  color: #fff;
+  background-color: gray;
+  width: 100%;
+  margin: 0;
 }
 
-.grid-link a:link{
-  color: #000;
-  text-decoration: none;
+.footerRow img{
+  width: 80%;
+  align-items:center;
+  padding-left: 40px;
 }
 
-.grid-link a:visited{
-  color: #000;
-  text-decoration: none;
+.footerRow{
+  width: 100%;
+  background-color: #fff;
+  margin: 0;
 }
 
-.grid-link a:active{
-  color: #000;
-  text-decoration: none;
-}
-
-.grid-link a:hover{
-  color: #000;
-  text-decoration: none;
-}
-
-.footer-padding{
-  padding-top:10px;
-}
-
-/*Media Query for Mobile Viewport */
-@media only screen and (max-width: 630px) {
-  form{
-     width: 70;
-     top-margin: 0;
-     bottom-margin: 0;
-     left-margin: auto;
-     right-margin: auto;
-   }
-
-   form-grid{
-     display: grid;
-     grid-template-columns: auto auto;
-     grid-gap: 20px;
-   }
-
-   .btn{
-     grid-column: 1 / span 2;
-   }
-
-  .container{
+@media screen and (min-width: 400px), print{
+  .grid-container{
+    background-image: url("../media/nw-adminbuilding.jpg");
     width: 100%;
-    height: auto;
-    background-color: #fff;
+    height: flex;
+  }
+
+  .logo{
+    width: 40%;
     position: fixed;
-    padding-bottom: 20px;
+    padding-top: 20px;
+  }
+
+  footer{
+    background-color:#006747;
+    color: #fff;
+  }
+
+  .ca-container{
+    display: grid;
+    row-gap: 20px;
+    column-gap: 10px;
+    grid-template-columns:auto;
+    width: 90%;
+    height: auto;
+    padding: 10px;
   }
 
   .navbar{
-    width: 300px;
-    height: 100%;
-    background-color: #006747;
-    position: fixed;
-    top: 0;
-    right: -300px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 20% 0 0 40%;
-    transition: right 0.8s cubic-bezier(1, 0, 0, 1);
+    padding-top: 40px;
+    font-size: 8%;
   }
-
-  .change{
-    right: 0;
-  }
-
-  .hamburger-menu{
-    width: 35px;
-    height: 30px;
-    position: fixed;
-    top: 50px;
-    right: 50px;
-    cursor: pointer;
-    display flex;
-    flex-direction: column;
-    justify-content: space-around;
-  }
-
-  .line{
-    width: 100%;
-    height: 3px;
-    background-color: #A6A6A6;
-    transition: all 0.8s;
-  }
-
-  .change .line-1{
-    transform: rotateZ(-405deg) translate(-8px, 6px);
-  }
-
-  .change .line-2{
-    opacity: 0;
-  }
-
-  .change .line-3{
-    transform: rotateZ(405deg) translate(-8px, -6px);
-  }
-
-  .nav-list{
-    text-align: right;
-    padding-top: 50px;
-  }
-
-  .nav-item{
-    list-style: none;
-    margin: 25px;
-  }
-
-  .nav-link{
-    text-decoration: none;
-    font-size: 8px;
-    color: #eee;
-    font-weight: 300;
-    letter-spacing: 1px;
-    text-transform: uppercase;
-    position: relative;
-    padding: 3px 0;
-  }
-
-  .nav-link::before, .nav-link::after{
-    content: " ";
-    width: 100%;
-    height: 2px;
-    background-color: #fff;
-    position: absolute;
-    left: 0;
-    transform: scaleX(0);
-    transition: transform 0.5s;
-  }
-
-  .nav-link::after{
-    bottom: 0;
-    transform-origin: right;
-  }
-
-  .nav-link::before{
-    top: 0;
-    transform-origin: left;
-  }
-
-  .nav-link:hover::before, .nav-link:hover::after{
-    transform: scaleX(1);
-  }
-
-  .container img{
-    position: fixed;
-    padding-top: 30px;
-    padding-left: 15px;
-    padding-bottom: 0px;
-    height: auto;
-    width: 30%;
-  }
-
-  .grid-container {
-    background-image: url("../media/nw_admin.jpg");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    width: 100%;
-    padding-top: 60px;
-  }
-
-  .grid-styles{
-    display: grid;
-    row-gap: 30px;
-    column-gap: 20px;
-    grid-template-columns: auto auto auto auto;
-    width: 90%;
-    height: auto;
-    padding: 40px;
-  }
-
-
-  .grid-item {
-    background-color: #fff;
-    padding: 20px;
-    font-size: auto;
-    text-align: center;
-  }
-
-  .grid-link a:link{
-    color: #000;
-    text-decoration: none;
-  }
-
-  .grid-link a:visited{
-    color: #000;
-    text-decoration: none;
-  }
-
-  .grid-link a:active{
-    color: #000;
-    text-decoration: none;
-  }
-
-  .grid-link a:hover{
-    color: #000;
-    text-decoration: none;
-  }
-
-  footer p {
-    font-size: 0.75em;
-    text-align: center;
-    color: #ffffff;
-    padding-top: 1em;
-    padding-bottom: 2em;
-    padding-left: 10px;
-    padding-right: 10px;
-  }
-
-  footer {
-    background-color: #006747;
-  }
-
-  .footer-padding{
-    padding-top:10px;
-  }
-
 }
 
-/*Media Query smallest size */
-@media only screen and (max-width: 300px){
-  .container{
-    width: 100%;
+@media screen and (min-width: 600px), print{
+  .ca-container{
+    display: grid;
+    row-gap: 20px;
+    column-gap: 10px;
+    grid-template-columns:auto;
+    width: 90%;
     height: auto;
-    position: fixed;
-    background-color: #fff;
-    padding-bottom: 10px;
+    padding: 10px;
+}
+
+/* Media Query for Tablet Viewport */
+@media screen and (min-width: 630px), print {
+
+  /* Tablet Viewport: Show tablet-desktop class, hide mobile class */
+  .tablet-desktop {
+    display: block;
   }
 
-  form{
-     width: 70;
-     top-margin: 0;
-     bottom-margin: 0;
-     left-margin: auto;
-     right-margin: auto;
-   }
-
-   form-grid{
-     display: grid;
-     grid-template-columns: auto auto;
-     grid-gap: 20px;
-   }
-
-   .btn{
-     grid-column: 1 / span 2;
-   }
-
-  .container img{
+  .mobile {
     display: none;
   }
 
   .grid-container{
-    display: flex;
+    background-image: url("../images/nw-adminbuilding.jpg");
   }
 
-  footer p {
-    font-size: 0.75em;
-    text-align: center;
-    color: #ffffff;
-    padding-top: 1em;
-    padding-bottom: 2em;
-    padding-left: 10px;
-    padding-right: 10px;
+  .grid-styles{
+    grid-template-columns: auto auto auto auto;
   }
 
-  footer {
-    background-color: #006747;
+  .logo{
+    width: 20%;
+    position: fixed;
+    padding-top: 10px;
+  }
+
+  .footerRow img{
+    width: 40%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  footer{
+    background-color:#006747;
+    color: #fff;
+  }
+
+  .form-container{
+  width: 70%;
+  height: auto;
+  background-color: #fff;
+  margin-top: 0px;
+  margin-bottom: 10px;
+  display: block;
+  margin-left: 160px;
+  text-align: center;
+  justify-content: center;
+  }
+
+  .ca-spacing{
+    padding-top:120px;
+  }
+
+
+  .ca-container{
+    display: grid;
+    row-gap: 20px;
+    column-gap: 10px;
+    grid-template-columns:auto auto;
+    width: 90%;
+    height: auto;
+    padding: 10px;
+  }
+
+
+  /* Tablet Viewport: Style rule for header */
+
+
+  /* Tablet Viewport: Style rules for nav area */
+
+
+  /* Tablet Viewport: Style rules for main content area */
+
+
+  }
+
+/* Media Query for Desktop Viewport */
+@media screen and (min-width: 1015px), print {
+
+  /* Desktop Viewport: Style rule for header */
+
+
+  /* Desktop Viewport: Style rules for nav area */
+
+  /* Desktop Viewport: Style Rules for main content */
+
+
+}
+
+/* Media Query for Large Desktop Viewport */
+@media screen and (min-width: 1921px) {
+  #container {
+    width: 1920px;
+    margin: 0 auto;
+  }
+}
+
+/* Media Query for Print */
+@media print {
+  body {
+    background-color: #fff;
+    color: #000;
   }
 }
