--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,4 @@
+
 /* Style rules for mobile viewport */
 body, main, p, h1, h2, h3, h4{
   font-family: "Dosis", sans-serif;
@@ -230,13 +231,13 @@ font-size: auto;
 
 /* Style rules for main content */
 .grid-container{
-  background-image: url("../media/mobile-bg-green.jpg");
+  background-image: url("../images/mobile-bg-green.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   width: 100%;
   height: 100%;
-  padding: 50px 5px 30px 5px;
+  padding: 80px 5px 30px 5px;
   position: flex;
   margin: 0;
 }
@@ -308,6 +309,7 @@ footer{
     background-image: url("../media/nw-adminbuilding.jpg");
     width: 100%;
     height: flex;
+    padding-left: 50px;
   }
 
   .logo{
@@ -361,7 +363,7 @@ footer{
   }
 
   .grid-container{
-    background-image: url("../images/nw-adminbuilding.jpg");
+    background-image: url("../media/nw-adminbuilding.jpg");
   }
 
   .grid-styles{
