--- a/css/styles.css
+++ b/css/styles.css
@@ -261,7 +261,7 @@ font-size: auto;
 
 /* Style rules for main content */
 .grid-container{
-  background-image: url("../images/mobile-bg-green.jpg");
+  background-image: url("../media/mobile-bg-green.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
