--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,9 @@ body, main, p, h1, h2, h3, h4{
   font-family: "Dosis", sans-serif;
 }
 
-
+.requiredText{
+  color: red;
+}
 
 .row {
   display: flex;
@@ -52,8 +54,6 @@ select{
 
    }
 
-   <!-- HTML !-->
-   <button class="button-74" role="button">Button 74</button>
 
    /* CSS */
    .button-74 {
@@ -61,7 +61,7 @@ select{
      border: 2px solid #006747;
      border-radius: 30px;
      box-shadow: #006747 4px 4px 0 0;
-     color: #006747
+     color: #006747;
      cursor: pointer;
      display: inline-block;
      font-weight: 600;
@@ -107,7 +107,7 @@ margin-bottom: 10px;
 padding: 20px 10px 20px 10px;
 text-align: center;
 margin: 10px;
-font-size: auto;
+font-size: smaller;
 }
 
 .access-container{
@@ -268,7 +268,7 @@ font-size: auto;
   width: 100%;
   height: 100%;
   padding: 80px 5px 30px 5px;
-  position: flex;
+  position: relative;
   margin: 0;
 }
 
@@ -338,7 +338,7 @@ footer{
   .grid-container{
     background-image: url("../media/nw-adminbuilding.jpg");
     width: 100%;
-    height: flex;
+    height: auto;
     padding-left: 50px;
   }
 
