--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,9 @@
-
 /* Style rules for mobile viewport */
 body, main, p, h1, h2, h3, h4{
   font-family: "Dosis", sans-serif;
 }
 
-.requiredText{
-  color: red;
-}
+
 
 .row {
   display: flex;
@@ -55,6 +52,7 @@ select{
    }
 
 
+
    /* CSS */
    .button-74 {
      background-color: #fff;
@@ -65,7 +63,7 @@ select{
      cursor: pointer;
      display: inline-block;
      font-weight: 600;
-     font-size: 18px;
+     font-size: 12px;
      padding: 0 18px;
      line-height: 50px;
      text-align: center;
@@ -73,10 +71,11 @@ select{
      user-select: none;
      -webkit-user-select: none;
      touch-action: manipulation;
+     margin-top: 10px;
    }
 
    .button-74:hover {
-     background-color: #fff;
+     background-color: #88D09E;
    }
 
    .button-74:active {
@@ -125,17 +124,6 @@ font-size: smaller;
 }
 
 .access-container a:hover{
-  text-decoration: none;
-  color: gray;
-}
-
-
-.form-container a{
-  color: #0C8E33;
-  text-decoration: none;
-}
-
-.form-container a:hover{
   text-decoration: none;
   color: gray;
 }
@@ -267,8 +255,9 @@ font-size: smaller;
   background-size: cover;
   width: 100%;
   height: 100%;
-  padding: 80px 5px 30px 5px;
-  position: relative;
+  padding: 50px 5px 30px 5px;
+  display: fixed;
+  position: center;
   margin: 0;
 }
 
@@ -338,8 +327,7 @@ footer{
   .grid-container{
     background-image: url("../media/nw-adminbuilding.jpg");
     width: 100%;
-    height: auto;
-    padding-left: 50px;
+
   }
 
   .logo{
@@ -351,8 +339,6 @@ footer{
   footer{
     background-color:#006747;
     color: #fff;
-    width: 100%;
-    margin: 0;
   }
 
   .ca-container{
@@ -369,11 +355,6 @@ footer{
     padding-top: 40px;
     font-size: 8%;
   }
-  .footerRow{
-    width: 100%;
-    background-color: #fff;
-    margin: 0;
-  }
 }
 
 @media screen and (min-width: 600px), print{
@@ -385,12 +366,6 @@ footer{
     width: 90%;
     height: auto;
     padding: 10px;
-}
-.footerRow{
-  width: 100%;
-  background-color: #fff;
-  margin: 0;
-}
 }
 
 /* Media Query for Tablet Viewport */
@@ -457,8 +432,6 @@ footer{
     height: auto;
     padding: 10px;
   }
-
-
 
 
   /* Tablet Viewport: Style rule for header */
