--- a/css/styles.css
+++ b/css/styles.css
@@ -3,15 +3,16 @@
 /* Style rule for header */
 .topBar{
   background-color: #fff;
-  position: fixed;
+  position: absolute;
   width: 100%;
   height: 100px;
   margin-left: 0;
 
+
 }
 .logo{
   width: 50%;
-  position: fixed;
+  position: absolute;
   padding-top: 20px;
   margin-left: 0%;
 }
@@ -21,10 +22,10 @@
   width: 300px;
   height: 100%;
   background-color: #006747;
-  position: fixed;
+  position: absolute;
   margin-top: 0%;
   right: -300px;
-  display: flex;
+  display: fixed;
   justify-content: center;
   align-items: center;
   border-radius: 40% 0 0 30%;
