--- a/css/styles.css
+++ b/css/styles.css
@@ -1,117 +1,49 @@
 /* Style rules for mobile viewport */
 
-/* Style rule for header */
-.topBar{
+/*style rules for new nav*/
+/* Style the navigation menu */
+.topnav {
+  overflow: hidden;
   background-color: #fff;
-  position: fixed;
-  width: 100%;
-  height: 100px;
-  margin-left: 0;
-
-}
-.logo{
-  width: 50%;
-  position: absolute;
-  padding-top: 20px;
-  margin-left: 0%;
-}
-
-/* Style rules for navigation area */
-.navbar{
-  width: 300px;
-  height: 100%;
-  background-color: #006747;
-  position: fixed;
-  margin-top: 0%;
-  right: -300px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 40% 0 0 30%;
-  transition: right 0.8s cubic-bezier(1, 0, 0, 1);
-  padding-bottom: 10px;
-}
-
-.change{
-  right: 0;
-}
-
-.hamburger-menu{
-  width: 35px;
-  height: 30px;
-  position: fixed;
-  top: 50px;
-  right: 50px;
-  cursor: pointer;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  background-color: #fff;
-}
-
-.line{
-  width: 100%;
-  height: 3px;
-  background-color: #A6A6A6;
-  transition: all 0.8s;
-}
-
-.change .line-1{
-  transform: rotateZ(-405deg) translate(-8px, 6px);
-}
-
-.change .line-2{
-  opacity: 0;
-}
-
-.change .line-3{
-  transform: rotateZ(405deg) translate(-8px, -6px);
-}
-
-.nav-list{
-  text-align: right;
-  padding-top: 80px;
-}
-
-.nav-item{
-  list-style: none;
-  margin: 15px;
-}
-
-.nav-link{
-  text-decoration: none;
-  font-size: 12px;
-  color: #eee;
-  font-weight: 300;
-  letter-spacing: 1px;
-  text-transform: uppercase;
   position: relative;
-  padding: 3px 0;
 }
 
-.nav-link::before, .nav-link::after{
-  content: " ";
-  width: 100%;
-  height: 2px;
-  background-color: #fff;
+.topnav #myLinks {
+  display: none;
+}
+
+.topnav a {
+  color: #000;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+  display: block;
+}
+
+.topnav a.icon {
+  background: #fff;
+  color:  #006747;
+  display: block;
   position: absolute;
-  left: 0;
-  transform: scaleX(0);
-  transition: transform 0.5s;
-}
-
-.nav-link::after{
-  bottom: 0;
-  transform-origin: right;
-}
-
-.nav-link::before{
+  right: 0;
   top: 0;
-  transform-origin: left;
 }
 
-.nav-link:hover::before, .nav-link:hover::after{
-  transform: scaleX(1);
+.regularNav{
+  display: none;
+}
+
+.mobileLogo{
+  width: 65%;
+}
+
+.mobileLinks a{
+  color:  #006747;
+}
+
+.mobileLinks a:hover{
+  color:  #006747;
+  background-color: #D2D6D3;
 }
 
 
@@ -286,6 +218,153 @@ footer{
 }
 
 @media screen and (min-width: 400px), print{
+  .topnav {
+    display:none;
+  }
+
+  .topnav #myLinks {
+    display: none;
+  }
+
+  .topnav a {
+    display: none;
+  }
+
+  .topnav a.icon {
+    display: none;
+  }
+
+
+  .mobileLogo{
+    display: none;
+  }
+
+  .mobileLinks a{
+    display: none;
+  }
+
+  .mobileLinks a:hover{
+    display: none;
+  }
+
+  .regularNav{
+    display: contents;
+  }
+
+  /*style rules for header */
+  .topBar{
+    background-color: #fff;
+    position: fixed;
+    width: 100%;
+    height: 100px;
+    margin-left: 0;
+
+  }
+  .logo{
+    width: 50%;
+    position: absolute;
+    padding-top: 20px;
+    margin-left: 0%;
+  }
+
+  /* Style rules for navigation area */
+  .navbar{
+    width: 300px;
+    height: 100%;
+    background-color: #006747;
+    position: fixed;
+    margin-top: 0%;
+    right: -300px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 40% 0 0 30%;
+    transition: right 0.8s cubic-bezier(1, 0, 0, 1);
+    padding-bottom: 10px;
+  }
+
+  .change{
+    right: 0;
+  }
+
+  .hamburger-menu{
+    width: 35px;
+    height: 30px;
+    position: fixed;
+    top: 50px;
+    right: 50px;
+    cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    background-color: #fff;
+  }
+
+  .line{
+    width: 100%;
+    height: 3px;
+    background-color: #A6A6A6;
+    transition: all 0.8s;
+  }
+
+  .change .line-1{
+    transform: rotateZ(-405deg) translate(-8px, 6px);
+  }
+
+  .change .line-2{
+    opacity: 0;
+  }
+
+  .change .line-3{
+    transform: rotateZ(405deg) translate(-8px, -6px);
+  }
+
+  .nav-list{
+    text-align: right;
+    padding-top: 80px;
+  }
+
+  .nav-item{
+    list-style: none;
+    margin: 15px;
+  }
+
+  .nav-link{
+    text-decoration: none;
+    font-size: 12px;
+    color: #eee;
+    font-weight: 300;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    position: relative;
+    padding: 3px 0;
+  }
+
+  .nav-link::before, .nav-link::after{
+    content: " ";
+    width: 100%;
+    height: 2px;
+    background-color: #fff;
+    position: absolute;
+    left: 0;
+    transform: scaleX(0);
+    transition: transform 0.5s;
+  }
+
+  .nav-link::after{
+    bottom: 0;
+    transform-origin: right;
+  }
+
+  .nav-link::before{
+    top: 0;
+    transform-origin: left;
+  }
+
+  .nav-link:hover::before, .nav-link:hover::after{
+    transform: scaleX(1);
+  }
+
   .grid-container{
     background-image: url("../media/nw-adminbuilding.jpg");
     width: 100%;
