--- a/css/styles.css
+++ b/css/styles.css
@@ -218,35 +218,63 @@ footer{
 }
 
 @media screen and (min-width: 400px), print{
-  .topnav {
-    display:none;
+
+  .grid-container{
+    background-image: url("../media/nw-adminbuilding.jpg");
+    width: 100%;
   }
 
-  .topnav #myLinks {
+  .mobileLogo{
+    width: 35%;
+    margin-left: 20px;
+  }
+
+
+  footer{
+    background-color:#006747;
+    color: #fff;
+  }
+
+  .ca-container{
+    display: grid;
+    row-gap: 20px;
+    column-gap: 10px;
+    grid-template-columns:auto;
+    width: 90%;
+    height: auto;
+    padding: 10px;
+  }
+
+  .navbar{
+    padding-top: 40px;
+    font-size: 8%;
+  }
+}
+
+@media screen and (min-width: 600px), print{
+  .topnav{
     display: none;
   }
 
-  .topnav a {
+  .topnav a{
     display: none;
   }
 
-  .topnav a.icon {
+  .topnav #myLinks{
     display: none;
   }
 
+  .topnav a.icon{
+    display: none;
+  }
 
   .mobileLogo{
     display: none;
   }
 
-  .mobileLinks a{
+  .mobileLinks{
     display: none;
   }
-
-  .mobileLinks a:hover{
-    display: none;
-  }
-
   .regularNav{
     display: contents;
   }
@@ -261,7 +289,7 @@ footer{
 
   }
   .logo{
-    width: 50%;
+    width: 40%;
     position: absolute;
     padding-top: 20px;
     margin-left: 0%;
@@ -364,40 +392,6 @@ footer{
   .nav-link:hover::before, .nav-link:hover::after{
     transform: scaleX(1);
   }
-
-  .grid-container{
-    background-image: url("../media/nw-adminbuilding.jpg");
-    width: 100%;
-  }
-
-  .logo{
-    width: 40%;
-    position: fixed;
-    padding-top: 20px;
-  }
-
-  footer{
-    background-color:#006747;
-    color: #fff;
-  }
-
-  .ca-container{
-    display: grid;
-    row-gap: 20px;
-    column-gap: 10px;
-    grid-template-columns:auto;
-    width: 90%;
-    height: auto;
-    padding: 10px;
-  }
-
-  .navbar{
-    padding-top: 40px;
-    font-size: 8%;
-  }
-}
-
-@media screen and (min-width: 600px), print{
   .ca-container{
     display: grid;
     row-gap: 20px;
@@ -434,18 +428,22 @@ footer{
     display: none;
   }
 
+  .regularNav{
+    padding-left: 20px;
+  }
+
   .grid-container{
     background-image: url("../media/nw-adminbuilding.jpg");
   }
 
   .grid-styles{
-    grid-template-columns: auto auto auto auto;
+    grid-template-columns: auto, auto, auto, auto;
     position: center;
     padding-left: 60px;
   }
 
   .logo{
-    width: 20%;
+    width: 40%;
     position: fixed;
     padding-top: 10px;
   }
@@ -463,13 +461,12 @@ footer{
   }
 
   .form-container{
-  width: 70%;
+  width: 90%;
   height: auto;
   background-color: #fff;
   margin-top: 0px;
   margin-bottom: 10px;
   display: block;
-  margin-left: 160px;
   text-align: center;
   justify-content: center;
   }
@@ -483,11 +480,20 @@ footer{
     display: grid;
     row-gap: 20px;
     column-gap: 10px;
-    grid-template-columns:auto auto;
+    grid-template-columns:auto;
     width: 90%;
     height: auto;
-    padding: 10px;
+    justify-content: center;
   }
+
+  /* .checkapp-cont{
+    display: grid;
+    grid-template-columns: auto;
+    width: 90%;
+    justify-content: center;
+    row-gap: 20px;
+    padding: 10px;
+  } */
 
 
   /* Tablet Viewport: Style rule for header */
